Worked on the Footer

--- a/index.html
+++ b/index.html
@@ -145,7 +145,12 @@
         <h5>Designed and Developed by Sourav Chhimpa</h5>
         <h6>Insta: <a href="https://www.instagram.com/sourav-chhimpa/" target="_blank">@sourav-chhimpa</a></h6>
     </div>
-    <!-- <footer style="display: flex; margin-bottom: 40px; align-items: center; justify-content: space-evenly; flex-wrap: wrap;">
+    <footer style="display: flex; margin-bottom: 40px; align-items: center; justify-content: space-evenly; flex-wrap: wrap;">
+        <style>
+            footer p:hover{
+                color: blue;
+            }
+        </style>
         <div style="width: 350px; margin: 0 auto; text-align: center;">
             <h1 style="font-size: larger;">Veggie Smart</h1>
             <p style="font-size: smaller; color: gray;">Made with 🩷 By Sourav</p>
@@ -162,7 +167,21 @@
             </div>
             <p style="font-size: smaller; color: gray;">2024 Veggie Smart. All Rights Reserved</p> 
         </div>
-        <div style="display: flex; width: 400px; background: rgba(0, 0, 0, 0.292); margin: 0 auto; text-align: center; border-radius: 8px;">
+        <div style="display: flex; min-width: 400px; max-width: fit-content; margin: 0 auto; text-align: center; justify-content: space-evenly; border-radius: 8px;">
+           <div>
+            <p style="color: white; text-align: left;">Sourav</p>
+            <p style="text-align: center; display: block; margin-top: 5px; text-align: left;"><a style="text-decoration: none; color: gray;" href="">About Us</a></p>
+            <p style="text-align: center; display: block; margin-top: 5px; text-align: left;"><a href="">About Us</a></p>
+            <p style="text-align: center; display: block; margin-top: 5px; text-align: left;"><a href="">About Us</a></p>
+            <p style="text-align: center; display: block; margin-top: 5px; text-align: left;"><a href="">About Us</a></p>
+           </div>
+           <div>
+            <p style="color: white; text-align: center;">Sourav</p>
+            <a style="display: block; margin-top: 5px; text-align: left; margin-left: 30px;" href="">About Us</a>
+            <a style="display: block; margin-top: 5px; text-align: left; margin-left: 30px;" href="">About Us</a>
+            <a style="display: block; margin-top: 5px; text-align: left; margin-left: 30px;" href="">About Us</a>
+            <a style="display: block; margin-top: 5px; text-align: left; margin-left: 30px;" href="">About Us</a>
+           </div>
            <div>
             <p style="color: white; text-align: center;">Sourav</p>
             <a style="display: block; margin-top: 5px; text-align: left; margin-left: 30px;" href="">About Us</a>
@@ -171,7 +190,7 @@
             <a style="display: block; margin-top: 5px; text-align: left; margin-left: 30px;" href="">About Us</a>
            </div>
         </div>
-    </footer> -->
+    </footer>
     <script src="./scripts/scripts.js"></script>
     <script src="./scripts/linksadd.js"></script>
 </body>
