Footer Ui Updated and Bug Fixed

--- a/index.html
+++ b/index.html
@@ -147,8 +147,13 @@
     </div>
     <footer style="display: flex; margin-bottom: 40px; align-items: center; justify-content: space-evenly; flex-wrap: wrap;">
         <style>
-            footer p:hover{
-                color: blue;
+            footer a{
+                text-decoration: none;
+                color: whitesmoke;
+                transition: 600ms;
+            }
+            footer a:hover{
+                color: rgb(116, 43, 43);
             }
         </style>
         <div style="width: 350px; margin: 0 auto; text-align: center;">
@@ -170,7 +175,7 @@
         <div style="display: flex; min-width: 400px; max-width: fit-content; margin: 0 auto; text-align: center; justify-content: space-evenly; border-radius: 8px;">
            <div>
             <p style="color: white; text-align: left;">Sourav</p>
-            <p style="text-align: center; display: block; margin-top: 5px; text-align: left;"><a style="text-decoration: none; color: gray;" href="">About Us</a></p>
+            <p style="text-align: center; display: block; margin-top: 5px; text-align: left;"><a href="">About Us</a></p>
             <p style="text-align: center; display: block; margin-top: 5px; text-align: left;"><a href="">About Us</a></p>
             <p style="text-align: center; display: block; margin-top: 5px; text-align: left;"><a href="">About Us</a></p>
             <p style="text-align: center; display: block; margin-top: 5px; text-align: left;"><a href="">About Us</a></p>
