Footer UI Changed

--- a/index.html
+++ b/index.html
@@ -149,11 +149,16 @@
         <style>
             footer a{
                 text-decoration: none;
-                color: whitesmoke;
+                color: rgba(255, 255, 255, 0.692);
                 transition: 600ms;
             }
             footer a:hover{
-                color: rgb(116, 43, 43);
+                color: rgba(255, 255, 255, 0.279);
+            }
+            .foot-title {
+                font-weight: 700;
+                text-align: center;
+                color: rgba(255, 255, 255, 0.806);
             }
         </style>
         <div style="width: 350px; margin: 0 auto; text-align: center;">
@@ -172,27 +177,27 @@
             </div>
             <p style="font-size: smaller; color: gray;">2024 Veggie Smart. All Rights Reserved</p> 
         </div>
-        <div style="display: flex; min-width: 400px; max-width: fit-content; margin: 0 auto; text-align: center; justify-content: space-evenly; border-radius: 8px;">
+        <div style="display: flex; min-width: 400px; max-width: 60%; margin: 0 auto; text-align: center; justify-content: space-evenly; border-radius: 8px;">
            <div>
-            <p style="color: white; text-align: left;">Sourav</p>
+            <p class="foot-title">Sourav</p>
             <p style="text-align: center; display: block; margin-top: 5px; text-align: left;"><a href="">About Us</a></p>
             <p style="text-align: center; display: block; margin-top: 5px; text-align: left;"><a href="">About Us</a></p>
             <p style="text-align: center; display: block; margin-top: 5px; text-align: left;"><a href="">About Us</a></p>
             <p style="text-align: center; display: block; margin-top: 5px; text-align: left;"><a href="">About Us</a></p>
            </div>
            <div>
-            <p style="color: white; text-align: center;">Sourav</p>
-            <a style="display: block; margin-top: 5px; text-align: left; margin-left: 30px;" href="">About Us</a>
-            <a style="display: block; margin-top: 5px; text-align: left; margin-left: 30px;" href="">About Us</a>
-            <a style="display: block; margin-top: 5px; text-align: left; margin-left: 30px;" href="">About Us</a>
-            <a style="display: block; margin-top: 5px; text-align: left; margin-left: 30px;" href="">About Us</a>
+            <p class="foot-title">Sourav</p>
+            <p style="text-align: center; display: block; margin-top: 5px; text-align: left;"><a href="">About Us</a></p>
+            <p style="text-align: center; display: block; margin-top: 5px; text-align: left;"><a href="">About Us</a></p>
+            <p style="text-align: center; display: block; margin-top: 5px; text-align: left;"><a href="">About Us</a></p>
+            <p style="text-align: center; display: block; margin-top: 5px; text-align: left;"><a href="">About Us</a></p>
            </div>
            <div>
-            <p style="color: white; text-align: center;">Sourav</p>
-            <a style="display: block; margin-top: 5px; text-align: left; margin-left: 30px;" href="">About Us</a>
-            <a style="display: block; margin-top: 5px; text-align: left; margin-left: 30px;" href="">About Us</a>
-            <a style="display: block; margin-top: 5px; text-align: left; margin-left: 30px;" href="">About Us</a>
-            <a style="display: block; margin-top: 5px; text-align: left; margin-left: 30px;" href="">About Us</a>
+            <p class="foot-title">Sourav</p>
+            <p style="text-align: center; display: block; margin-top: 5px; text-align: left;"><a href="">About Us</a></p>
+            <p style="text-align: center; display: block; margin-top: 5px; text-align: left;"><a href="">About Us</a></p>
+            <p style="text-align: center; display: block; margin-top: 5px; text-align: left;"><a href="">About Us</a></p>
+            <p style="text-align: center; display: block; margin-top: 5px; text-align: left;"><a href="">About Us</a></p>
            </div>
         </div>
     </footer>
