Pages are added and Footer updated

--- a/index.html
+++ b/index.html
@@ -193,11 +193,11 @@
             <p style="text-align: center; display: block; margin-top: 5px; text-align: left;"><a href="">About Us</a></p>
            </div>
            <div>
-            <p class="foot-title">Sourav</p>
+            <p class="foot-title">Pages</p>
             <p style="text-align: center; display: block; margin-top: 5px; text-align: left;"><a href="">About Us</a></p>
-            <p style="text-align: center; display: block; margin-top: 5px; text-align: left;"><a href="">About Us</a></p>
-            <p style="text-align: center; display: block; margin-top: 5px; text-align: left;"><a href="">About Us</a></p>
-            <p style="text-align: center; display: block; margin-top: 5px; text-align: left;"><a href="">About Us</a></p>
+            <p style="text-align: center; display: block; margin-top: 5px; text-align: left;"><a href="">Contact Us</a></p>
+            <p style="text-align: center; display: block; margin-top: 5px; text-align: left;"><a href="">FAQ</a></p>
+            <p style="text-align: center; display: block; margin-top: 5px; text-align: left;"><a href="">Terms and Conditions</a></p>
            </div>
         </div>
     </footer>
