Footer Update and Bugs Solved

--- a/index.html
+++ b/index.html
@@ -160,6 +160,9 @@
                 text-align: center;
                 color: rgba(255, 255, 255, 0.806);
             }
+            footer {
+                text-align: center;
+            }
         </style>
         <div style="width: 350px; margin: 0 auto; text-align: center;">
             <h1 style="font-size: larger;">Veggie Smart</h1>
@@ -194,10 +197,10 @@
            </div>
            <div>
             <p class="foot-title">Pages</p>
-            <p style="text-align: center; display: block; margin-top: 5px; text-align: left;"><a href="">About Us</a></p>
-            <p style="text-align: center; display: block; margin-top: 5px; text-align: left;"><a href="">Contact Us</a></p>
-            <p style="text-align: center; display: block; margin-top: 5px; text-align: left;"><a href="">FAQ</a></p>
-            <p style="text-align: center; display: block; margin-top: 5px; text-align: left;"><a href="">Terms and Conditions</a></p>
+            <p style="text-align: center; display: block; margin-top: 3px; text-align: center;"><a href="">About Us</a></p>
+            <p style="text-align: center; display: block; margin-top: 3px; text-align: center;"><a href="">Contact Us</a></p>
+            <p style="text-align: center; display: block; margin-top: 3px; text-align: center;"><a href="">FAQ</a></p>
+            <p style="text-align: center; display: block; margin-top: 3px; text-align: center;"><a href="">T&C</a></p>
            </div>
         </div>
     </footer>
