Linkadd.js Updated and Bug Fixed

--- a/index.html
+++ b/index.html
@@ -183,8 +183,8 @@
         <div style="display: flex; min-width: 400px; max-width: 60%; margin: 0 auto; text-align: center; justify-content: space-evenly; border-radius: 8px;">
            <div>
             <p class="foot-title">Trending</p>
-            <p style="text-align: center; display: block; margin-top: 5px; text-align: left;"><a href="https://souravhere.github.io/Veggie-Smart/FinanceCal/InterestCal.html">Simple Interest</a></p>
-            <p style="text-align: center; display: block; margin-top: 5px; text-align: left;"><a href="https://souravhere.github.io/Veggie-Smart/FinanceCal/InterestCal.html">Compound Interest</a></p>
+            <p style="text-align: center; display: block; margin-top: 5px; text-align: left;"><a href="./FinanceCal/InterestCal.html">Simple Interest</a></p>
+            <p style="text-align: center; display: block; margin-top: 5px; text-align: left;"><a href="./FinanceCal/CompoundInterest.html">Compound Interest</a></p>
             <p style="text-align: center; display: block; margin-top: 5px; text-align: left;"><a href="https://souravhere.github.io/Veggie-Smart/HomeImprovementCals/FlooringCalculator.html">Advanced Flooring</a></p>
             <p style="text-align: center; display: block; margin-top: 5px; text-align: left;"><a href="https://souravhere.github.io/Veggie-Smart/AutomotiveCalculators/MaintenanceCostCalculator.html">Maintenance Cost</a></p>
            </div>
