Files are linked to the index Footer

--- a/index.html
+++ b/index.html
@@ -185,8 +185,8 @@
             <p class="foot-title">Trending</p>
             <p style="text-align: center; display: block; margin-top: 5px; text-align: left;"><a href="./FinanceCal/InterestCal.html">Simple Interest</a></p>
             <p style="text-align: center; display: block; margin-top: 5px; text-align: left;"><a href="./FinanceCal/CompoundInterest.html">Compound Interest</a></p>
-            <p style="text-align: center; display: block; margin-top: 5px; text-align: left;"><a href="https://souravhere.github.io/Veggie-Smart/HomeImprovementCals/FlooringCalculator.html">Advanced Flooring</a></p>
-            <p style="text-align: center; display: block; margin-top: 5px; text-align: left;"><a href="https://souravhere.github.io/Veggie-Smart/AutomotiveCalculators/MaintenanceCostCalculator.html">Maintenance Cost</a></p>
+            <p style="text-align: center; display: block; margin-top: 5px; text-align: left;"><a href="./HomeImprovementCals/FlooringCalculator.html">Advanced Flooring</a></p>
+            <p style="text-align: center; display: block; margin-top: 5px; text-align: left;"><a href="./AutomotiveCalculators/MaintenanceCostCalculator.html">Maintenance Cost</a></p>
            </div>
            <div>
             <p class="foot-title">Sourav</p>
