Library Used Section are added

--- a/index.html
+++ b/index.html
@@ -145,64 +145,66 @@
         <h5>Designed and Developed by Sourav Chhimpa</h5>
         <h6>Insta: <a href="https://www.instagram.com/sourav-chhimpa/" target="_blank">@sourav-chhimpa</a></h6>
     </div>
-    <footer style="display: flex; margin-bottom: 40px; align-items: center; justify-content: space-evenly; flex-wrap: wrap;">
-        <style>
-            footer a{
-                text-decoration: none;
-                color: rgba(255, 255, 255, 0.692);
-                transition: 600ms;
-            }
-            footer a:hover{
-                color: rgba(255, 255, 255, 0.279);
-            }
-            .foot-title {
-                font-weight: 700;
-                text-align: center;
-                color: rgba(255, 255, 255, 0.806);
-            }
-            footer {
-                text-align: center;
-            }
-        </style>
-        <div style="width: 350px; margin: 0 auto; text-align: center;">
-            <h1 style="font-size: larger;">Veggie Smart</h1>
-            <p style="font-size: smaller; color: gray;">Made with 🩷 By Sourav</p>
-            <div style="max-width: 200px; margin: 0 auto; display: inline-block; margin: 10px 0px 10px 0px;">
-                <a href="">
-                    <i class="ri-github-line" style="margin-right: 20px; color: white; font-size: x-large; padding: 5px; background:rgba(128, 128, 128, 0.342);border-radius: 8px;"></i>
-                </a>
-                <a href="">
-                    <i class="ri-twitter-x-line" style="margin-right: 20px; color: white; font-size: x-large; padding: 5px; background:rgba(128, 128, 128, 0.342);border-radius: 8px;"></i>
-                </a>
-                <a href="">
-                    <i class="ri-instagram-line" style="color: white; font-size: x-large; padding: 5px; background:rgba(128, 128, 128, 0.342);border-radius: 8px;"></i>
-                </a>
+    <footer>
+        <div style="display: flex; margin-bottom: 40px; align-items: center; justify-content: space-evenly; flex-wrap: wrap;">
+            <style>
+                footer a{
+                    text-decoration: none;
+                    color: rgba(255, 255, 255, 0.692);
+                    transition: 600ms;
+                }
+                footer a:hover{
+                    color: rgba(255, 255, 255, 0.279);
+                }
+                .foot-title {
+                    font-weight: 700;
+                    text-align: center;
+                    color: rgba(255, 255, 255, 0.806);
+                }
+                footer {
+                    text-align: center;
+                }
+            </style>
+            <div style="width: 350px; margin: 0 auto; text-align: center;">
+                <h1 style="font-size: larger;">Veggie Smart</h1>
+                <p style="font-size: smaller; color: gray;">Made with 🩷 By Sourav</p>
+                <div style="max-width: 200px; margin: 0 auto; display: inline-block; margin: 10px 0px 10px 0px;">
+                    <a href="">
+                        <i class="ri-github-line" style="margin-right: 20px; color: white; font-size: x-large; padding: 5px; background:rgba(128, 128, 128, 0.342);border-radius: 8px;"></i>
+                    </a>
+                    <a href="">
+                        <i class="ri-twitter-x-line" style="margin-right: 20px; color: white; font-size: x-large; padding: 5px; background:rgba(128, 128, 128, 0.342);border-radius: 8px;"></i>
+                    </a>
+                    <a href="">
+                        <i class="ri-instagram-line" style="color: white; font-size: x-large; padding: 5px; background:rgba(128, 128, 128, 0.342);border-radius: 8px;"></i>
+                    </a>
+                </div>
             </div>
-            <p style="font-size: smaller; color: gray;">2024 Veggie Smart. All Rights Reserved</p> 
+            <div style="display: flex; min-width: 400px; max-width: 60%; margin: 0 auto; text-align: center; justify-content: space-evenly; border-radius: 8px;">
+               <div>
+                <p class="foot-title">Trending</p>
+                <p style="text-align: center; text-align: left;"><a href="./FinanceCal/InterestCal.html">Simple Interest</a></p>
+                <p style="text-align: center; text-align: left;"><a href="./FinanceCal/CompoundInterest.html">Compound Interest</a></p>
+                <p style="text-align: center; text-align: left;"><a href="./HomeImprovementCals/FlooringCalculator.html">Advanced Flooring</a></p>
+                <p style="text-align: center; text-align: left;"><a href="./AutomotiveCalculators/MaintenanceCostCalculator.html">Maintenance Cost</a></p>
+               </div>
+               <div>
+                <p class="foot-title">Library Used</p>
+                <p style="text-align: center; text-align: left;"><a href="https://www.chartjs.org/" target="_blank">Chart.js</a></p>
+                <p style="text-align: center; text-align: left;"><a href="https://www.babylonjs.com/" target="_blank">Babylon.js</a></p>
+                <p style="text-align: center; text-align: left;"><a href="http://pdfmake.org/#/" target="_blank">pdfmake</a></p>
+                <p style="text-align: center; text-align: left;"><a href="https://tailwindcss.com/" target="_blank">Tailwind CSS</a></p>
+               </div>
+               <div>
+                <p class="foot-title">Pages</p>
+                <p style="text-align: center; text-align: center;"><a href="">About Us</a></p>
+                <p style="text-align: center; text-align: center;"><a href="">Contact Us</a></p>
+                <p style="text-align: center; text-align: center;"><a href="">FAQ</a></p>
+                <p style="text-align: center; text-align: center;"><a href="">T&C</a></p>
+               </div>
+            </div>
         </div>
-        <div style="display: flex; min-width: 400px; max-width: 60%; margin: 0 auto; text-align: center; justify-content: space-evenly; border-radius: 8px;">
-           <div>
-            <p class="foot-title">Trending</p>
-            <p style="text-align: center; display: block; margin-top: 5px; text-align: left;"><a href="./FinanceCal/InterestCal.html">Simple Interest</a></p>
-            <p style="text-align: center; display: block; margin-top: 5px; text-align: left;"><a href="./FinanceCal/CompoundInterest.html">Compound Interest</a></p>
-            <p style="text-align: center; display: block; margin-top: 5px; text-align: left;"><a href="./HomeImprovementCals/FlooringCalculator.html">Advanced Flooring</a></p>
-            <p style="text-align: center; display: block; margin-top: 5px; text-align: left;"><a href="./AutomotiveCalculators/MaintenanceCostCalculator.html">Maintenance Cost</a></p>
-           </div>
-           <div>
-            <p class="foot-title">Sourav</p>
-            <p style="text-align: center; display: block; margin-top: 5px; text-align: left;"><a href="">About Us</a></p>
-            <p style="text-align: center; display: block; margin-top: 5px; text-align: left;"><a href="">About Us</a></p>
-            <p style="text-align: center; display: block; margin-top: 5px; text-align: left;"><a href="">About Us</a></p>
-            <p style="text-align: center; display: block; margin-top: 5px; text-align: left;"><a href="">About Us</a></p>
-           </div>
-           <div>
-            <p class="foot-title">Pages</p>
-            <p style="text-align: center; display: block; margin-top: 3px; text-align: center;"><a href="">About Us</a></p>
-            <p style="text-align: center; display: block; margin-top: 3px; text-align: center;"><a href="">Contact Us</a></p>
-            <p style="text-align: center; display: block; margin-top: 3px; text-align: center;"><a href="">FAQ</a></p>
-            <p style="text-align: center; display: block; margin-top: 3px; text-align: center;"><a href="">T&C</a></p>
-           </div>
-        </div>
+        <p style="font-size: smaller; color: gray;">2024 Veggie Smart. All Rights Reserved</p> 
     </footer>
     <script src="./scripts/scripts.js"></script>
     <script src="./scripts/linksadd.js"></script>
