Remix Icon Removed and Svg Added

--- a/MarketCal/Calculate-Price-Kg.html
+++ b/MarketCal/Calculate-Price-Kg.html
@@ -55,9 +55,68 @@
             <h4>View the Result</h4>
             <p>The price per kilogram will be displayed below the form in the result area.</p>
         </div>
-        <h5>Designed and Developed by Sourav Chhimpa</h5>
-        <h6>Insta: <a href="https://www.instagram.com/sourav-chhimpa/" target="_blank">@sourav-chhimpa</a></h6>
     </div>
+    <footer>
+        <div style="display: flex; margin-bottom: 40px; align-items: center; justify-content: space-evenly; flex-wrap: wrap;">
+            <style>
+                footer a{
+                    text-decoration: none;
+                    color: rgba(255, 255, 255, 0.692);
+                    transition: 600ms;
+                }
+                footer a:hover{
+                    color: rgba(255, 255, 255, 0.279);
+                }
+                .foot-title {
+                    font-weight: 700;
+                    text-align: center;
+                    color: rgba(255, 255, 255, 0.806);
+                }
+                footer {
+                    text-align: center;
+                }
+            </style>
+            <div style="width: 350px; margin: 0 auto; text-align: center;">
+                <h1 style="font-size: larger;">Veggie Smart</h1>
+                <p style="font-size: smaller; color: gray;">Made with 🩷 By Sourav</p>
+                <div style="max-width: 200px; margin: 0 auto; display: inline-block; margin: 10px 0px 10px 0px;">
+                    <a href="">
+                        <svg style="margin-right: 20px; color: white; font-size: x-large; padding: 5px; background:rgba(128, 128, 128, 0.342);border-radius: 8px;"   xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/></svg>
+                    </a>
+                    <a href="">
+                        <svg style="margin-right: 20px; color: white; font-size: x-large; padding: 5px; background:rgba(128, 128, 128, 0.342);border-radius: 8px;" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" width="24px" height="24px" viewBox="0 0 24 24" style="enable-background:new 0 0 24 24;" xml:space="preserve"><path d="M14.095479,10.316482L22.286354,1h-1.940718l-7.115352,8.087682L7.551414,1H1l8.589488,12.231093L1,23h1.940717  l7.509372-8.542861L16.448587,23H23L14.095479,10.316482z M11.436522,13.338465l-0.871624-1.218704l-6.924311-9.68815h2.981339  l5.58978,7.82155l0.867949,1.218704l7.26506,10.166271h-2.981339L11.436522,13.338465z"/></svg>
+                    </a>
+                    <a href="">
+                        <svg style="margin-right: 20px; color: white; font-size: x-large; padding: 5px; background:rgba(128, 128, 128, 0.342);border-radius: 8px;" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z"/></svg>
+                    </a>
+                </div>
+            </div>
+            <div style="display: flex; min-width: 400px; max-width: 60%; margin: 0 auto; text-align: center; justify-content: space-evenly; border-radius: 8px;">
+               <div>
+                <p class="foot-title">Trending</p>
+                <p style="text-align: center; text-align: left;"><a href="./FinanceCal/InterestCal.html">Simple Interest</a></p>
+                <p style="text-align: center; text-align: left;"><a href="./FinanceCal/CompoundInterest.html">Compound Interest</a></p>
+                <p style="text-align: center; text-align: left;"><a href="./HomeImprovementCals/FlooringCalculator.html">Advanced Flooring</a></p>
+                <p style="text-align: center; text-align: left;"><a href="./AutomotiveCalculators/MaintenanceCostCalculator.html">Maintenance Cost</a></p>
+               </div>
+               <div>
+                <p class="foot-title">Library Used</p>
+                <p style="text-align: center; text-align: left;"><a href="https://www.chartjs.org/" target="_blank">Chart.js</a></p>
+                <p style="text-align: center; text-align: left;"><a href="https://www.babylonjs.com/" target="_blank">Babylon.js</a></p>
+                <p style="text-align: center; text-align: left;"><a href="http://pdfmake.org/#/" target="_blank">pdfmake</a></p>
+                <p style="text-align: center; text-align: left;"><a href="https://tailwindcss.com/" target="_blank">Tailwind CSS</a></p>
+               </div>
+               <div>
+                <p class="foot-title">Pages</p>
+                <p style="text-align: center; text-align: center;"><a href="./Pages/Aboutus.html">About Us</a></p>
+                <p style="text-align: center; text-align: center;"><a href="./Pages/contactus.html">Contact Us</a></p>
+                <p style="text-align: center; text-align: center;"><a href="./Pages/Faq.html">FAQ</a></p>
+                <p style="text-align: center; text-align: center;"><a href="./Pages/Terms-and-conditions.html">T&C</a></p>
+               </div>
+            </div>
+        </div>
+        <p style="font-size: smaller; color: gray;">&copy; 2024 Veggie Smart. All Rights Reserved</p> 
+    </footer>
     </div>
 </body>
 <script src="./../scripts/scripts.js"></script>
