Open Graph Updated and OGT img added

--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
     <!-- Open Graph Meta Tags for Social Media Sharing -->
     <meta property="og:title" content="Veggie Smart">
     <meta property="og:description" content="A tool to calculate vegetable prices, recipe costs, and more. Updated regularly with new features.">
-    <meta property="og:image" content="Source Images/index img.png">
-    <meta property="og:url" content="https://souravhere.github.io/Veggie-Smart/">
+    <meta property="og:image" content="./SourceImages/open-graph-img.png">
+    <meta property="og:url" content="https://veggie-smart.vercel.app/">
     <meta property="og:type" content="website">
     
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Veggie Smart">
     <meta name="twitter:description" content="A tool to calculate vegetable prices, recipe costs, and more. Updated regularly with new features.">
-    <meta name="twitter:image" content="Source Images/index img.png">
+    <meta name="twitter:image" content="./SourceImages/open-graph-img.png">
     <meta name="twitter:creator" content="@sourav-chhimpa">
 
     <!-- | IMPORTANT | -->
