--- a/MarketCal/Calculate-Total-Price.html
+++ b/MarketCal/Calculate-Total-Price.html
@@ -30,7 +30,7 @@
                 <h2>Home</h2>             
             </div>
         </a>
-        <div id="documentation" class="documentation" style="margin: 20px; padding: 20px; background-color: #f9f9f9; border: 1px solid #ddd;">
+        <div id="documentation" class="documentation" style="margin: 20px; padding: 20px; background-color: transparent; border: 1px solid #ddd; border-radius: 12px;">
             <h2>User Documentation for "Calculate Total Price" Calculator</h2>
             <h3>Overview</h3>
             <p>The "Calculate Total Price" calculator helps you determine the total price of a product based on its price per kilogram and the quantity (in kilograms and grams) you wish to purchase.</p>
