Pages Bugs Fixed

--- a/FitnessCalculators/BodyFatPercentage.html
+++ b/FitnessCalculators/BodyFatPercentage.html
@@ -27,11 +27,11 @@
         </div>
         <div class="flex items-center justify-between mt-4 mb-4">
             <figure>
-                <img class="w-28 rounded-lg" src="./../Source Images/NeckCircumference-demo.png" alt="">
+                <img class="w-28 rounded-lg" src="./../SourceImages/NeckCircumference-demo.png" alt="">
                 <figcaption class="text-sm mt-2">Neck Circumference</figcaption>
             </figure>
             <figure>
-                <img class="w-28 rounded-lg" src="./../Source Images/Waist-Circumference-demo-2.jpg" alt="">
+                <img class="w-28 rounded-lg" src="./../SourceImages/Waist-Circumference-demo-2.jpg" alt="">
                 <figcaption class="text-sm mt-2">Waist Circumference</figcaption>
             </figure>
         </div>
