--- a/HomeImprovementCals/PaintCal.html
+++ b/HomeImprovementCals/PaintCal.html
@@ -51,7 +51,7 @@
         </div>
 
         <div class="bg-gray-800 p-4 rounded-lg">
-            <img class="mx-auto" src="./../Source Images/paint-cal-img.png" alt="Paint Cal">
+            <img class="mx-auto" src="./../SourceImages/paint-cal-img.png" alt="Paint Cal">
             <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
                 <div>
                     <label for="units" class="block text-sm font-medium">Measurement Units:</label>
