Footer js file created and Bug Fixed

--- a/HomeImprovementCals/FlooringCalculator.html
+++ b/HomeImprovementCals/FlooringCalculator.html
@@ -146,7 +146,7 @@
         <h5 class="text-center mt-8">Designed and Developed by Sourav Chhimpa</h5>
         <h6 class="text-center mt-2">Insta: <a href="https://www.instagram.com/sourav-chhimpa/" target="_blank" class="text-purple-400">@sourav-chhimpa</a></h6> 
     </div>
-
+    <script src="./../scripts/footer.js"></script>
     <script src="https://cdn.babylonjs.com/babylon.js"></script>
     <script src="https://cdn.babylonjs.com/loaders/babylonjs.loaders.min.js"></script>
     <script src="flooringCalculator.js"></script>
