--- a/HomeImprovementCals/RenovationCostEstimator.html
+++ b/HomeImprovementCals/RenovationCostEstimator.html
@@ -190,6 +190,8 @@
         <h5 class="text-center mt-8">Designed and Developed by Sourav Chhimpa</h5>
         <h6 class="text-center mt-2">Insta: <a href="https://www.instagram.com/sourav-chhimpa/" target="_blank" class="text-purple-400">@sourav-chhimpa</a></h6> 
         </div>
+        <footer id="footer" class="footer"></footer>
+        <script src="./../scripts/footer.js"></script>
         <script src="RenovationCostEstimator.js"></script>
     </body>
     
