--- a/HomeImprovementCals/PaintCal.html
+++ b/HomeImprovementCals/PaintCal.html
@@ -111,9 +111,7 @@
         </div>
         <h4 class="text-center text-2xl mt-4 font-semibold">3D View</h4>
         <canvas id="renderCanvas" class="bg-gray-700 rounded-lg mt-4"></canvas>
-        <h6 class="text-center mt-4"><a href="./../index.html" class="text-purple-400 text-2xl font-bold">Home</a></h6>
-        <h5 class="text-center mt-8">Designed and Developed by Sourav Chhimpa</h5>
-        <h6 class="text-center mt-2">Insta: <a href="https://www.instagram.com/sourav-chhimpa/" target="_blank" class="text-purple-400">@sourav-chhimpa</a></h6> 
+        <footer id="footer"></footer>
     </div>
     <script src="./../scripts/footer.js"></script>
     <script src="https://cdn.babylonjs.com/babylon.js"></script>
