--- a/AutomotiveCalculators/DepreciationCalculator.html
+++ b/AutomotiveCalculators/DepreciationCalculator.html
@@ -66,9 +66,8 @@
             </ol>
         </div>
     </div>
-    <h6 class="text-center mt-4"><a href="./../index.html" class="text-purple-400 text-2xl font-bold">Home</a></h6>
-    <h5 class="text-center mt-8">Designed and Developed by Sourav Chhimpa</h5>
-    <h6 class="text-center mt-2 mb-6">Insta: <a href="https://www.instagram.com/sourav-chhimpa/" target="_blank" class="text-purple-400">@sourav-chhimpa</a></h6> 
+    <footer id="footer"></footer>
+    <script src="./../scripts/footer.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.3.1/jspdf.umd.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/html2canvas@0.4.1/dist/html2canvas.min.js"></script>
     <script src="DepreciationCalculator.js"></script>
