--- a/FitnessCalculators/BodyFatPercentage.html
+++ b/FitnessCalculators/BodyFatPercentage.html
@@ -187,9 +187,8 @@
             </ul>
         </div>
     </div>
-    <h6 class="text-center mt-4"><a href="./../index.html" class="text-purple-400 text-2xl font-bold">Home</a></h6>
-    <h5 class="text-center mt-8">Designed and Developed by Sourav Chhimpa</h5>
-    <h6 class="text-center mt-2 mb-6">Insta: <a href="https://www.instagram.com/sourav-chhimpa/" target="_blank" class="text-purple-400">@sourav-chhimpa</a></h6> 
+    <footer id="footer"></footer>
+    <script src="./../scripts/footer.js"></script>
     <script src="BodyFatPercentage.js"></script>
 </body>
 </html>
