--- a/HomeImprovementCals/FlooringCalculator.html
+++ b/HomeImprovementCals/FlooringCalculator.html
@@ -142,10 +142,8 @@
                 </li>
             </ul>
         </div>
-        <h6 class="text-center mt-4"><a href="./../index.html" class="text-purple-400 text-2xl font-bold">Home</a></h6>
-        <h5 class="text-center mt-8">Designed and Developed by Sourav Chhimpa</h5>
-        <h6 class="text-center mt-2">Insta: <a href="https://www.instagram.com/sourav-chhimpa/" target="_blank" class="text-purple-400">@sourav-chhimpa</a></h6> 
     </div>
+    <footer id="footer"></footer>
     <script src="./../scripts/footer.js"></script>
     <script src="https://cdn.babylonjs.com/babylon.js"></script>
     <script src="https://cdn.babylonjs.com/loaders/babylonjs.loaders.min.js"></script>
