--- a/calhealth/CalorieBurnCalculator.html
+++ b/calhealth/CalorieBurnCalculator.html
@@ -15,8 +15,8 @@
         }
     </style>
 </head>
-<body class="flex flex-col justify-center items-center min-h-screen py-6 sm:bg-gray-900 bg-gray-800">
-    <div class="w-full max-w-xl p-6 bg-gray-800 rounded-lg shadow-lg">
+<body class="items-center min-h-screen py-6 sm:bg-gray-900 bg-gray-800">
+    <div class="w-full p-6 bg-gray-800 rounded-lg shadow-lg">
         <h2 class="text-2xl font-semibold mb-6 text-center">Calorie Burn Calculator</h2>
         <!-- Short Note on Use of the Calculator -->
         <div class="mb-4">
@@ -62,10 +62,9 @@
             <button id="calculateBtn" class="w-full bg-green-500 hover:bg-green-600 text-white py-2 px-4 rounded-lg mb-4">Calculate Calories Burned</button>
             <div id="result" class="hidden p-4 bg-gray-900 rounded-lg"></div>
         </div>
-        <h6 class="text-center mt-4"><a href="./../index.html" class="text-purple-400 text-2xl font-bold">Home</a></h6>
-        <h5 class="text-center mt-8">Designed and Developed by Sourav Chhimpa</h5>
-        <h6 class="text-center mt-2">Insta: <a href="https://www.instagram.com/sourav-chhimpa/" target="_blank" class="text-purple-400">@sourav-chhimpa</a></h6>
     </div>
+    <footer id="footer"></footer>
+    <script src="./../scripts/footer.js"></script>
     <script src="CalorieBurnCalculator.js"></script>
 </body>
 </html>
