--- a/calhealth/HydrationCalculator.html
+++ b/calhealth/HydrationCalculator.html
@@ -15,8 +15,8 @@
         }
     </style>
 </head>
-<body class="flex flex-col justify-center items-center min-h-screen py-6">
-    <div class="w-full max-w-xl p-6 bg-gray-800 rounded-lg shadow-lg">
+<body class="items-center min-h-screen py-6">
+    <div class="w-full p-6 bg-gray-800 rounded-lg shadow-lg">
         
         <h2 class="text-2xl font-semibold mb-6 text-center">Hydration Calculator</h2>
         <!-- Short Note on Use of the Calculator -->
@@ -101,10 +101,9 @@
             <h2 class="text-xl font-semibold mb-4"><span class="text-red-400">Note:</span> Beta Version Disclaimer</h2>
             <p class="text-sm">This Hydration Calculator is currently in beta and may not provide 100% accurate measurements. Use it for general reference and consult professional advice for precise recommendations.</p>
         </div>
-        <h6 class="text-center mt-4"><a href="./../index.html" class="text-purple-400 text-2xl font-bold">Home</a></h6>
-        <h5 class="text-center mt-8">Designed and Developed by Sourav Chhimpa</h5>
-        <h6 class="text-center mt-2">Insta: <a href="https://www.instagram.com/sourav-chhimpa/" target="_blank" class="text-purple-400">@sourav-chhimpa</a></h6> 
     </div>
+    <footer id="footer"></footer>
+    <script src="./../scripts/footer.js"></script>
     <script src="HydrationCalculator.js"></script>
 </body>
 </html>
