--- a/calhealth/MacroNutrientcal.html
+++ b/calhealth/MacroNutrientcal.html
@@ -15,8 +15,8 @@
         }
     </style>
 </head>
-<body class="flex flex-col justify-center items-center min-h-screen py-6">
-    <div class="w-full max-w-xl p-6 bg-gray-800 rounded-lg shadow-lg">
+<body class="items-center min-h-screen py-6">
+    <div class="w-full p-6 bg-gray-800 rounded-lg shadow-lg">
         <h2 class="text-2xl font-semibold mb-6 text-center">Macro Nutrient Calculator</h2>
         <div class="mb-4">
             <button id="noteToggleBtn" class="w-full bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded-lg mb-2">Use of this Calculator</button>
@@ -122,10 +122,9 @@
             <h2 class="text-xl font-semibold mb-4"><span class="text-red-400">Note:</span> Beta Version Disclaimer</h2>
             <p class="text-sm">This Macro Nutrient Calculator is currently in beta and may not provide 100% accurate measurements. Use it for general reference and consult professional advice for precise recommendations.</p>
         </div>
-        <h6 class="text-center mt-4"><a href="./../index.html" class="text-purple-400 text-2xl font-bold">Home</a></h6>
-        <h5 class="text-center mt-8">Designed and Developed by Sourav Chhimpa</h5>
-        <h6 class="text-center mt-2">Insta: <a href="https://www.instagram.com/sourav-chhimpa/" target="_blank" class="text-purple-400">@sourav-chhimpa</a></h6> 
     </div>
+    <footer id="footer"></footer>
+    <script src="./../scripts/footer.js"></script>
 <script src="MacroNutrientcal.js"></script>
 </body>
 </html>
