--- a/calhealth/bmi.html
+++ b/calhealth/bmi.html
@@ -12,8 +12,8 @@
         }
     </style>
 </head>
-<body class="flex justify-center sm:items-center h-fit">
-    <div class="w-full max-w-md p-6 bg-gray-800 rounded-lg shadow-lg">
+<body class="sm:items-center h-fit">
+    <div class="w-full p-6 bg-gray-800 rounded-lg shadow-lg">
         <h2 class="text-2xl font-semibold mb-6 text-center">BMI Calculator</h2>
         <div id="instructions">
             <h2 class="text-2xl font-semibold mb-4">Instructions:</h2>
@@ -85,10 +85,9 @@
                         </table>
                     </div>
                 </div>
-        <h6 class="text-center mt-4"><a href="./../index.html" target="_blank" class="text-purple-400 text-2xl font-bold">Home</a></h6>
-        <h5 class="text-center mt-8">Designed and Developed by Sourav Chhimpa</h5>
-        <h6 class="text-center mt-2">Insta: <a href="https://www.instagram.com/sourav-chhimpa/" target="_blank" class="text-purple-400">@sourav-chhimpa</a></h6>    
-    </div>
+            </div>
+            <footer id="footer"></footer>
+    <script src="./../scripts/footer.js"></script>
     <script src="bmi.js"></script>
 </body>
 </html>
