--- a/EducationCalculators/GradeCalculator.html
+++ b/EducationCalculators/GradeCalculator.html
@@ -18,7 +18,7 @@
         }
     </style>
 </head>
-<body class="min-h-screen flex flex-col items-center justify-center">
+<body class="min-h-screen items-center justify-center">
     <div class="container mx-auto px-4 py-6">
         <div class="card p-6 rounded-lg shadow-lg text-white w-full">
             <h1 class="text-3xl font-bold mb-4 text-center">Advanced Grade Calculator</h1>
@@ -56,10 +56,9 @@ finalGrade = (score1 * weight1 + score2 * weight2 + ... + scoreN * weightN) / (w
                 </p>
             </div>
         </div>
-        <h6 class="text-center mt-4"><a href="./../index.html" class="text-purple-400 text-2xl font-bold">Home</a></h6>
-        <h5 class="text-center mt-8">Designed and Developed by Sourav Chhimpa</h5>
-        <h6 class="text-center mt-2">Insta: <a href="https://www.instagram.com/sourav-chhimpa/" target="_blank" class="text-purple-400">@sourav-chhimpa</a></h6>
     </div>
+    <footer id="footer"></footer>
+    <script src="./../scripts/footer.js"></script>
     <script src="GradeCalculator.js"></script>
 </body>
 </html>
