--- a/EducationCalculators/PercentageCalculator.html
+++ b/EducationCalculators/PercentageCalculator.html
@@ -9,7 +9,7 @@
     <style>
         /* Optional custom styles */
         .container {
-            max-width: 800px;
+            max-width: 100%;
             margin: 0 auto;
         }
 
@@ -84,12 +84,9 @@
                 </p>
             </div>
         </div>
-        <h6 class="text-center mt-4"><a href="./../index.html" class="text-purple-400 text-2xl font-bold">Home</a></h6>
-        <h5 class="text-center mt-8 text-white">Designed and Developed by Sourav Chhimpa</h5>
-        <h6 class="text-center mt-2 text-white">Insta: <a href="https://www.instagram.com/sourav-chhimpa/" target="_blank" class="text-purple-400">@sourav-chhimpa</a></h6>
-
     </div>
-
+    <footer id="footer"></footer>
+    <script src="./../scripts/footer.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="PercentageCalculator.js"></script>
 </body>
