Footer.js added to the Event Planning Calculators

--- a/EventPlanningCalculators/Guest-list-Cal.html
+++ b/EventPlanningCalculators/Guest-list-Cal.html
@@ -171,6 +171,8 @@
             </ul>
         </div>
     </div>
+    <footer id="footer"></footer>
+    <script src="./../scripts/footer.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.70/pdfmake.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.70/vfs_fonts.js"></script>
     <script src="Guest-list-Cal.js"></script>
