footer linked with Finance Calculators and Few bugs solved

--- a/FinanceCal/CompoundInterest.html
+++ b/FinanceCal/CompoundInterest.html
@@ -65,9 +65,8 @@
             </ul>
             <p class="text-sm mt-2">The calculator adjusts the interest rate and compounding frequency based on the user's input to ensure accurate calculation. The total interest earned and the total amount after interest are displayed as the results.</p>
         </div>
-        <h6 class="text-center mt-4"><a href="./../index.html" class="text-purple-400 text-2xl font-bold">Home</a></h6>
-        <h5 class="text-center mt-8">Designed and Developed by Sourav Chhimpa</h5>
-        <h6 class="text-center mt-2">Insta: <a href="https://www.instagram.com/sourav-chhimpa/" target="_blank" class="text-purple-400">@sourav-chhimpa</a></h6> 
+        <footer id="footer"></footer>
+        <script src="./../scripts/footer.js"></script>
     </div>
 </body>
 </html>
