Footer.js added in all remanig files

--- a/MarketCal/Calculate-Total-Price.html
+++ b/MarketCal/Calculate-Total-Price.html
@@ -53,9 +53,9 @@
             <h4>View the Result</h4>
             <p>The calculated total price will be displayed below the form in the result area.</p>
         </div>
-        <h5>Designed and Developed by Sourav Chhimpa</h5>
-        <h6>Insta: <a href="https://www.instagram.com/sourav-chhimpa/" target="_blank">@sourav-chhimpa</a></h6>
     </div>
+    <footer id="footer"></footer>
+    <script src="./../scripts/footer.js"></script>
 </body>
 <script src="./../scripts/scripts.js"></script>
 </html>
