--- a/Recipe Cost Calculator/RecipeCostCalculator.html
+++ b/Recipe Cost Calculator/RecipeCostCalculator.html
@@ -67,11 +67,9 @@
             <button type="button" onclick="calculateRecipeCost()" class="w-full p-2 bg-green-600 rounded hover:bg-green-700">Calculate Total Cost</button>
             <div id="recipeCostResult" class="result mt-6 bg-gray-700 p-4 rounded"></div>
         </div>
-
-        <h6 class="text-center text-2xl mt-6 font-bold"><a href="./../index.html" class="text-purple-400">Home</a></h6>
-        <h5 class="text-center mt-8">Designed and Developed by Sourav Chhimpa</h5>
-        <h6 class="text-center mt-2">Insta: <a href="https://www.instagram.com/sourav-chhimpa/" target="_blank" class="text-purple-400">@sourav-chhimpa</a></h6>
     </div>
+    <footer id="footer"></footer>
+    <script src="./../scripts/footer.js"></script>
     <script src="./RecipeCostCalculator.js"></script>
 </body>
 </html>
