--- a/Offers Cal/OffersCal.html
+++ b/Offers Cal/OffersCal.html
@@ -24,12 +24,14 @@
             </form>
             <div id="discountResult" class="result"></div>
         </div>
-        <div class="calculator">
-            <h5><a href="./../index.html">Home</a></h5>
-        </div>
-        <h5>Designed and Developed by Sourav Chhimpa</h5>
-        <h6>Insta: <a href="https://www.instagram.com/sourav-chhimpa/" target="_blank">@sourav-chhimpa</a></h6>
+        <a href="./../index.html">
+            <div class="calculator">
+                <h5>Home</h5>
+            </div>
+        </a>
     </div>
+    <footer id="footer"></footer>
+    <script src="./../scripts/footer.js"></script>
     <script src="./offerscal.js"></script>
 </body>
 </html>
