--- a/Recipe Cost Calculator/Serving-Size-Converter.html
+++ b/Recipe Cost Calculator/Serving-Size-Converter.html
@@ -97,9 +97,8 @@
       </ul>
     </div>
   </div>
-  <h6 class="text-center mt-4"><a href="./../index.html" class="text-purple-400 text-2xl font-bold">Home</a></h6>
-  <h5 class="text-center mt-8">Designed and Developed by Sourav Chhimpa</h5>
-  <h6 class="text-center mt-2 mb-6">Insta: <a href="https://www.instagram.com/sourav-chhimpa/" target="_blank" class="text-purple-400">@sourav-chhimpa</a></h6> 
+  <footer id="footer"></footer>
+  <script src="./../scripts/footer.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/pdfmake@0.1.70/build/pdfmake.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/pdfmake@0.1.70/build/vfs_fonts.js"></script>
   <script src="Serving-Size-Converter.js"></script>
